tests/baselines/reference/enumLiteralTypes3.errors.txt
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(10,5): error TS2322: Type 'Yes | No' is not assignable to type 'Yes'.
  Type 'No' is not assignable to type 'Yes'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(11,5): error TS2322: Type 'Unknown | Yes | No' is not assignable to type 'Yes'.
  Type 'Unknown' is not assignable to type 'Yes'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(12,5): error TS2322: Type 'Choice' is not assignable to type 'Yes'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(18,5): error TS2322: Type 'Unknown | Yes | No' is not assignable to type 'Yes | No'.
  Type 'Unknown' is not assignable to type 'Yes | No'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(19,5): error TS2322: Type 'Choice' is not assignable to type 'Yes | No'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(26,5): error TS2322: Type 'Choice' is not assignable to type 'Unknown | Yes | No'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(37,5): error TS2322: Type 'Unknown' is not assignable to type 'Yes'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(39,5): error TS2322: Type 'No' is not assignable to type 'Yes'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(40,5): error TS2322: Type 'Unknown' is not assignable to type 'Yes | No'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(52,5): error TS2365: Operator '===' cannot be applied to types 'Yes' and 'Unknown'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(54,5): error TS2365: Operator '===' cannot be applied to types 'Yes' and 'No'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(55,5): error TS2365: Operator '===' cannot be applied to types 'Yes | No' and 'Unknown'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(87,14): error TS2678: Type 'Unknown' is not comparable to type 'Yes'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(89,14): error TS2678: Type 'No' is not comparable to type 'Yes'.
tests/cases/conformance/types/literal/enumLiteralTypes3.ts(96,14): error TS2678: Type 'Unknown' is not comparable to type 'Yes | No'.


==== tests/cases/conformance/types/literal/enumLiteralTypes3.ts (15 errors) ====
    const enum Choice { Unknown, Yes, No };
    
    type Yes = Choice.Yes;
    type YesNo = Choice.Yes | Choice.No;
    type NoYes = Choice.No | Choice.Yes;
    type UnknownYesNo = Choice.Unknown | Choice.Yes | Choice.No;
    
    function f1(a: Yes, b: YesNo, c: UnknownYesNo, d: Choice) {
        a = a;
        a = b;
        ~
!!! error TS2322: Type 'Yes | No' is not assignable to type 'Yes'.
!!! error TS2322:   Type 'No' is not assignable to type 'Yes'.
        a = c;
        ~
!!! error TS2322: Type 'Unknown | Yes | No' is not assignable to type 'Yes'.
!!! error TS2322:   Type 'Unknown' is not assignable to type 'Yes'.
        a = d;
        ~
!!! error TS2322: Type 'Choice' is not assignable to type 'Yes'.
    }
    
    function f2(a: Yes, b: YesNo, c: UnknownYesNo, d: Choice) {
        b = a;
        b = b;
        b = c;
        ~
!!! error TS2322: Type 'Unknown | Yes | No' is not assignable to type 'Yes | No'.
!!! error TS2322:   Type 'Unknown' is not assignable to type 'Yes | No'.
        b = d;
        ~
!!! error TS2322: Type 'Choice' is not assignable to type 'Yes | No'.
    }
    
    function f3(a: Yes, b: YesNo, c: UnknownYesNo, d: Choice) {
        c = a;
        c = b;
        c = c;
        c = d;
        ~
!!! error TS2322: Type 'Choice' is not assignable to type 'Unknown | Yes | No'.
    }
    
    function f4(a: Yes, b: YesNo, c: UnknownYesNo, d: Choice) {
        d = a;
        d = b;
        d = c;
        d = d;
    }
    
    function f5(a: Yes, b: YesNo, c: UnknownYesNo, d: Choice) {
        a = Choice.Unknown;
        ~
!!! error TS2322: Type 'Unknown' is not assignable to type 'Yes'.
        a = Choice.Yes;
        a = Choice.No;
        ~
!!! error TS2322: Type 'No' is not assignable to type 'Yes'.
        b = Choice.Unknown;
        ~
!!! error TS2322: Type 'Unknown' is not assignable to type 'Yes | No'.
        b = Choice.Yes;
        b = Choice.No;
        c = Choice.Unknown;
        c = Choice.Yes;
        c = Choice.No;
        d = Choice.Unknown;
        d = Choice.Yes;
        d = Choice.No;
    }
    
    function f6(a: Yes, b: YesNo, c: UnknownYesNo, d: Choice) {
        a === Choice.Unknown;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'Yes' and 'Unknown'.
        a === Choice.Yes;
        a === Choice.No;
        ~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'Yes' and 'No'.
        b === Choice.Unknown;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'Yes | No' and 'Unknown'.
        b === Choice.Yes;
        b === Choice.No;
        c === Choice.Unknown;
        c === Choice.Yes;
        c === Choice.No;
        d === Choice.Unknown;
        d === Choice.Yes;
        d === Choice.No;
    }
    
    function f7(a: Yes, b: YesNo, c: UnknownYesNo, d: Choice) {
        a === a;
        a === b;
        a === c;
        a === d;
        b === a;
        b === b;
        b === c;
        b === d;
        c === a;
        c === b;
        c === c;
        c === d;
        d === a;
        d === b;
        d === c;
        d === d;
    }
    
    function f10(x: Yes): Yes {
        switch (x) {
            case Choice.Unknown: return x;
                 ~~~~~~~~~~~~~~
!!! error TS2678: Type 'Unknown' is not comparable to type 'Yes'.
            case Choice.Yes: return x;
            case Choice.No: return x;
                 ~~~~~~~~~
!!! error TS2678: Type 'No' is not comparable to type 'Yes'.
        }
        return x;
    }
    
    function f11(x: YesNo): YesNo {
        switch (x) {
            case Choice.Unknown: return x;
                 ~~~~~~~~~~~~~~
!!! error TS2678: Type 'Unknown' is not comparable to type 'Yes | No'.
            case Choice.Yes: return x;
            case Choice.No: return x;
        }
        return x;
    }
    
    function f12(x: UnknownYesNo): UnknownYesNo {
        switch (x) {
            case Choice.Unknown: return x;
            case Choice.Yes: return x;
            case Choice.No: return x;
        }
        return x;
    }
    
    function f13(x: Choice): Choice {
        switch (x) {
            case Choice.Unknown: return x;
            case Choice.Yes: return x;
            case Choice.No: return x;
        }
        return x;
    }